fix overflow issue with responsive table

--- a/app/javascript/stylesheets/hitobito/_table.scss
+++ b/app/javascript/stylesheets/hitobito/_table.scss
@@ -5,8 +5,7 @@
 
   width: 100%;
   padding-bottom: 15px;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: visible;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -webkit-overflow-scrolling: touch;
 
